--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -43,11 +43,11 @@ f19_clean <- ridership_f17_to_f19 %>%
     .keep='unused'
     )
 
-f19_clean %>% write.csv('data/stations_routes_f19_ridership.csv')
-f23_clean %>% write.csv('data/stations_routes_f23_ridership.csv')
+f19_clean %>% write.csv('data/cleaned/stations_routes_f19_ridership.csv')
+f23_clean %>% write.csv('data/cleaned/stations_routes_f23_ridership.csv')
 ```
 
-## MBTA GTFS
+# MBTA GTFS
 
 If we use actual travel times and headways, the only GTFS data we need is the association between stop IDs and stop names (aka parent stations).
 
@@ -55,14 +55,23 @@ If we would prefer scheduled travel times and headways, we would need to calcula
 
 Either way, we will also want to grab the lat/long coordinates for each stop from GTFS. GTFS is also probably the best source for calculating the number (and names) of bus routes that serve a given RT station. 
 
-MBTA GTFS recap link: https://www.arcgis.com/home/item.html?id=9ab1dc7ea2bf4ad7b7e25cc6b941b39a
+1. Download the MBTA GTFS recap dataset from this link: https://www.arcgis.com/home/item.html?id=9ab1dc7ea2bf4ad7b7e25cc6b941b39a
+
+2. Run this next cell to interactively choose the folder where you downloaded the dataset:
 
 ```{r}
-f23_gtfs <- read_gtfs(path.expand('~/Data/GTFS pre-rating-recaps/2023-fall-prerating-recap.zip'))
-f19_gtfs <- read_gtfs(path.expand('~/Data/GTFS pre-rating-recaps/2019-fall-prerating-recap.zip'))
+downloaded_gtfs_path <- choose.dir(default = "", caption = "Select GTFS folder")
 ```
 
-# select stops from stop_times on trips belonging to Rapid Transit routes
+I am not sure whether this approach will work on non-Windows machines.
+
+```{r}
+f23_gtfs <- read_gtfs(paste0(downloaded_gtfs_path, '\\2023-fall-prerating-recap.zip'))
+f19_gtfs <- read_gtfs(paste0(downloaded_gtfs_path, '\\2019-fall-prerating-recap.zip'))
+```
+
+## select stops from stop_times on trips belonging to Rapid Transit routes
+
 ```{r}
 rt_stations_per_route <- function(gtfs) { 
   gtfs$routes %>%
@@ -87,16 +96,61 @@ rt_stations_f23 <- rt_stations_per_route(f23_gtfs)
 rt_stations_f19 <- rt_stations_per_route(f19_gtfs)
 rt_stations_f23
 ```
+Save the station information to file. The unique identifier per row is the combination of route_id and parent_station
 
 ```{r}
-rt_stations_f23 %>% write.csv('data/stations_routes_f23.csv', row.names=FALSE)
-rt_stations_f19 %>% write.csv('data/stations_routes_f19.csv', row.names=FALSE)
+rt_stations_f23 %>% write.csv('data/cleaned/stations_routes_f23.csv', row.names=FALSE)
+rt_stations_f19 %>% write.csv('data/cleaned/stations_routes_f19.csv', row.names=FALSE)
 ```
 
+## Calculate the number of bus routes that transfer to each RT station
+
+```{r}
+rt_stations_f23 <- read.csv('data/cleaned/stations_routes_f23.csv')
+rt_stations_f19 <- read.csv('data/cleaned/stations_routes_f19.csv')
+```
+
+```{r}
+count_connecting_buses <- function(gtfs) {
+  # the goal here is to count the number of bus routes serving each parent_station
+  gtfs$stops %>% 
+    inner_join(gtfs$stop_times, by='stop_id') %>%
+    inner_join(gtfs$trips, by='trip_id') %>%
+    inner_join(gtfs$routes, by='route_id') %>%
+    # the idea to filter by listed_route != 1 comes from the MBTA GTFS documentation:
+    # https://github.com/mbta/gtfs-documentation/blob/master/reference/gtfs.md#routestxt
+    # in practice, it filters out a handful of variants that aren't really their own routes
+    filter(str_detect(route_desc, 'Bus'), listed_route != '1') %>%
+    select(parent_station, route_id) %>%
+    unique() %>%
+    group_by(parent_station) %>%
+    summarise(connecting_bus_routes = n(), .groups='drop')
+}
+
+f23_buses <- f23_gtfs %>% count_connecting_buses()
+f19_buses <- f19_gtfs %>% count_connecting_buses()
+```
+
+```{r}
+clean_bus_connections <- function(rt_stations_df, buses_df) {
+  rt_stations_df %>%
+    left_join(buses_df, by='parent_station') %>%
+    mutate(connecting_bus_routes = case_when(
+      is.na(connecting_bus_routes) ~ 0, .default=connecting_bus_routes
+      )) %>%
+    select(route_id, parent_station, connecting_bus_routes)
+}
+
+rt_stations_f23 %>% clean_bus_connections(f23_buses) %>%
+  write.csv('data/cleaned/stations_routes_f23_bus_connections.csv', row.names=FALSE)
+
+rt_stations_f19 %>% clean_bus_connections(f19_buses) %>%
+  write.csv('data/cleaned/stations_routes_f19_bus_connections.csv', row.names=FALSE)
+```
 
 For travel times and headways, we can either use schedules (reflecting "promised" service) or actual service. For schedules, we just need the GTFS. For actuals, we need GTFS and the travel time and headway datasets described below.
 
-## MBTA Rapid Transit Travel Times
+# MBTA Rapid Transit Travel Times
 
 This is a very large dataset that will require us to:
 - filter dates to our specific season
@@ -105,7 +159,7 @@ This is a very large dataset that will require us to:
 2023 link: https://mbta-massdot.opendata.arcgis.com/datasets/b08854b18ad942e4bc471c8c20e80792/about
 2019 link: https://mbta-massdot.opendata.arcgis.com/datasets/a70a2151c74f4ea7b6688970b76d2ff7/about 
 
-## MBTA Rapid Transit Headways 
+# MBTA Rapid Transit Headways 
 
 This is a very large dataset that will require us to:
 - filter dates to our specific season
@@ -114,15 +168,15 @@ This is a very large dataset that will require us to:
 2023 link: https://mbta-massdot.opendata.arcgis.com/datasets/896d043f33ae4915b530df12141c772c_0/explore
 2019 link: https://mbta-massdot.opendata.arcgis.com/datasets/5c36245a6e7f4b89851b99a4a2bce02b_0/explore
 
-## Walking-Distance Buffer Areas
+# Walking-Distance Buffer Areas
 
 This requires setting up an OpenRouteService API key (free) as described here: https://giscience.github.io/openrouteservice-r/articles/openrouteservice.html 
 
 ```{r}
 library(openrouteservice)
 
-rt_stations_f23 <- read.csv('data/stations_routes_f23.csv')
-rt_stations_f19 <- read.csv('data/stations_routes_f19.csv')
+rt_stations_f23 <- read.csv('data/cleaned/stations_routes_f23.csv')
+rt_stations_f19 <- read.csv('data/cleaned/stations_routes_f19.csv')
 ```
 
 Be careful about how many times you run this - the openrouteservice isochrones API limits you to 500 requests per day per API key. Each request returns 5 polygons, and we have ~150 stops, so a full run will use ~30 requests. There's also 20 request per minute throttling, so 1 full run per dataframe will take ~1.5 minutes.
@@ -212,16 +266,16 @@ clean_walk_polys <- function(walk_polys_df) {
 }
 
 walk_polys_f23 %>% clean_walk_polys() %>%
-  write.csv('data/stations_routes_f23_geoms_overlapping.csv', row.names=FALSE)
+  write.csv('data/cleaned/stations_routes_f23_geoms_overlapping.csv', row.names=FALSE)
 
 walk_polys_f23_nonoverlap %>% clean_walk_polys() %>%
-  write.csv('data/stations_routes_f23_geoms_nonoverlapping.csv', row.names=FALSE)
+  write.csv('data/cleaned/stations_routes_f23_geoms_nonoverlapping.csv', row.names=FALSE)
 
 walk_polys_f19 %>% clean_walk_polys() %>%
-  write.csv('data/stations_routes_f19_geoms_overlapping.csv', row.names=FALSE)
+  write.csv('data/cleaned/stations_routes_f19_geoms_overlapping.csv', row.names=FALSE)
 
 walk_polys_f19_nonoverlap %>% clean_walk_polys() %>%
-  write.csv('data/stations_routes_f19_geoms_nonoverlapping.csv', row.names=FALSE)
+  write.csv('data/cleaned/stations_routes_f19_geoms_nonoverlapping.csv', row.names=FALSE)
 ```
 
 ## CTPS park-and-ride inventory for MBTA stations
@@ -230,8 +284,8 @@ Downloaded from https://www.ctps.org/maploc/www/apps/pnr-dashboard/index.html an
 
 ```{r}
 ctps <- read.csv('data/mbta/ctps_pnr_lots_polygons.csv')
-rt_stations_f23 <- read.csv('data/stations_routes_f23.csv')
-rt_stations_f19 <- read.csv('data/stations_routes_f19.csv')
+rt_stations_f23 <- read.csv('data/cleaned/stations_routes_f23.csv')
+rt_stations_f19 <- read.csv('data/cleaned/stations_routes_f19.csv')
 ```
 
 ```{r}
@@ -261,6 +315,6 @@ join_ctps <- function(rt_stations_df) {
   select(route_id, parent_station, pnr_spaces)
 }
 
-rt_stations_f23 %>% join_ctps() %>% write.csv('data/stations_routes_f23_pnr_spaces.csv', row.names=FALSE)
-rt_stations_f19 %>% join_ctps() %>% write.csv('data/stations_routes_f19_pnr_spaces.csv', row.names=FALSE)
+rt_stations_f23 %>% join_ctps() %>% write.csv('data/cleaned/stations_routes_f23_pnr_spaces.csv', row.names=FALSE)
+rt_stations_f19 %>% join_ctps() %>% write.csv('data/cleaned/stations_routes_f19_pnr_spaces.csv', row.names=FALSE)
 ```
