--- a/model_building.Rmd
+++ b/model_building.Rmd
@@ -18,16 +18,26 @@ get_dataset <- function(dataset) {
   read.csv(paste0('data/cleaned/stations_routes_', dataset, '.csv'))
 }
 
+xfer_station_names <- c('Park Street', 'Downtown Crossing', 'Government Center', 'State')
+
 model_data_f23 <- get_dataset('f23') %>%
   inner_join(get_dataset('f23_geoms_nonoverlapping'), by=c('route_id', 'parent_station')) %>%
   inner_join(get_dataset('f23_bus_connections'), by=c('route_id', 'parent_station')) %>%
+  inner_join(get_dataset('f23_headways'), by=c('route_id', 'parent_station')) %>%
+  inner_join(get_dataset('f23_travel_times_to_cbd'), by=c('route_id', 'parent_station')) %>%
   inner_join(get_dataset('f23_pnr_spaces'), by=c('route_id', 'parent_station')) %>%
   inner_join(get_dataset('f23_walk_scores'), by=c('route_id', 'parent_station')) %>%
-  left_join(get_dataset('f23_ridership'), by=c('route_id', 'parent_station'))
+  left_join(get_dataset('f23_ridership'), by=c('route_id', 'parent_station')) %>%
+  mutate(transfer = case_when(stop_name %in% xfer_station_names ~ 1, .default=0)) %>%
+  mutate(route=1) %>% # this creates dummy variables for each route
+  pivot_wider(names_from='route_id', values_from='route', values_fill=0)
 ```
 
 ```{r}
-basic_reg <- lm(avg_boardings ~ walk_score + connecting_bus_routes + pnr_spaces, data=model_data_f23)
+basic_reg <- lm(avg_boardings ~ walk_score + pnr_spaces #+ connecting_bus_routes
+                + connecting_bus_riders + avg_headway + avg_tt + transfer
+                + Red + Orange + Blue
+                , data=model_data_f23)
 
 summary(basic_reg)
 ```
